<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/show_on_map_image"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtVwRouteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/route_title_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/TxtVwRouteDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtVwRouteTitle"
            android:layout_below="@+id/txtVwRouteTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/route_title_description_text" />

        <ImageView
            android:id="@+id/imgBtnShowMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/txtVwRouteTitle"
            android:background="@drawable/showonmap"
            android:contentDescription="@string/show_on_map_image" />

        <TextView
            android:id="@+id/txtVwRouteID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtVwRouteTitle"
            android:layout_alignBottom="@+id/txtVwRouteTitle"
            android:layout_toRightOf="@+id/txtVwRouteTitle"
            android:text="TextView"
            android:visibility="invisible" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/txtVwSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.33"
            android:text="Speed" />

        <TextView
            android:id="@+id/txtVwDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="Distance" />

        <TextView
            android:id="@+id/txtVwTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="Time" />
    </LinearLayout>

</LinearLayout>